<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TableRow android:layout_weight="25">

        <TextView
            android:id="@+id/Calculo"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:textSize="50sp" />

    </TableRow>

    <TableRow android:layout_weight="25">

        <TextView
            android:id="@+id/Resultado"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/Num0"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageButton
            android:id="@+id/Trash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:src="@drawable/trash" />

        <ImageButton
            android:id="@+id/Backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:src="@drawable/backspace" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num7"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num8"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num9"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Mult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/x"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num4"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num5"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num6"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Minus"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/One"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num1"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num2"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num3"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Sum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Point"
            android:textSize="50sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num0"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Equal"
            android:textSize="50sp"
            android:textStyle="bold" />

    </TableRow>

</TableLayout>